--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles/styles.css" /> 
+    <link rel="stylesheet" type="text/css" href="styles/style.css" /> 
     <title>Document</title>
 </head>
 <body>
     <div class="header">
         <h1>Header</h1>
         <p>My supercool header</p>
+        <img src="/days.jpg" alt="nothing" width="200" height="300">
     </div>
 </body>
 </html>
